--- a/block-BNaaft/eventManagement/views/eventDetailsPage.ejs
+++ b/block-BNaaft/eventManagement/views/eventDetailsPage.ejs
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <%- include('partials/header') %>
+    <nav class="flex bg-blue-900 text-white py-4 px-8 justify-between items-center">
+        <a href="/"><h1 class="text-3xl font-bold text-white">ANZEvents</h1></a>
+        <a href="/events" class="text-white bg-green-500 p-2 rounded-lg font-bold hover:bg-green-400">Events Page</a>
+    </nav>
     <section class="flex m-12 items-center justify-between text-custom">
         <div class="flex-60">
             <h2 class="text-3xl font-bold my-2"><%= event.title %></h2>
