--- a/block-BNaaft/eventManagement/views/eventEditForm.ejs
+++ b/block-BNaaft/eventManagement/views/eventEditForm.ejs
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <%- include('partials/header') %>
+    <nav class="flex bg-blue-900 text-white py-4 px-8 justify-between items-center">
+        <a href="/"><h1 class="text-3xl font-bold text-white">ANZEvents</h1></a>
+        <a href="/events" class="text-white bg-green-500 p-2 rounded-lg font-bold hover:bg-green-400">Events Page</a>
+    </nav>
     <div class="w-1/3 mx-auto flex justify-center items-center my-12">
         <form action="/events/<%= event.id %>" method="POST" class="flex flex-col border border-gray-300 w-full items-center py-8 rounded-lg">
             <input type="text" name="title" class="bg-gray-200 p-2 rounded-xl my-2 w-custom border border-gray-300" placeholder="Title" value="<%= event.title %>">
@@ -25,5 +28,6 @@
         </form>
     </div>
     
+    <%- include('partials/footer') %>
 </body>
 </html>
