--- a/block-BNaaft/eventManagement/views/remarkEditForm.ejs
+++ b/block-BNaaft/eventManagement/views/remarkEditForm.ejs
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <%- include('partials/header') %>
+    <nav class="flex bg-blue-900 text-white py-4 px-8 justify-between items-center">
+        <a href="/"><h1 class="text-3xl font-bold text-white">ANZEvents</h1></a>
+        <a href="/events" class="text-white bg-green-500 p-2 rounded-lg font-bold hover:bg-green-400">Events Page</a>
+    </nav>
     <div class="h-primary flex justify-center items-center">
         <form action="/remarks/<%= remark.id %>" method="POST" class="flex flex-col items-center border border-gray-300 rounded-lg px-4 py-6 w-1/3">
             <input type="text" name="title" placeholder="Enter Remarks" value="<%= remark.title %>" class="my-2 bg-gray-200 p-2 rounded-lg border border-gray-300 w-custom">
